<resources>
    <string name="app_name">学迹无涯</string>

    <string name="splash_title">学迹无涯</string>

    <string name="please_login">请登录</string>
    <string name="user_name">用户名</string>
    <string name="password">密码</string>
    <string name="login">登录</string>
    <string name="forgot_your_password">忘记密码？</string>


    <string name="please_register">请注册</string>
    <string name="confirm_password">确认密码</string>
    <string name="register">注册</string>


    <string name="not_empty_user_name_or_password">输入的用户名或密码不能为空！</string>
    <string name="login_success">登录成功！</string>
    <string name="login_failure">登录失败！</string>
    <string name="register_success">注册成功！</string>
    <string name="register_failure">注册失败！</string>
    <string name="confirm_error">您两次输入的密码不一致！</string>


    <string name="task">待办任务</string>
    <string name="message">消息</string>
    <string name="friends">我的好友</string>
    <string name="statistics">统计数据</string>
    <string name="new_friend">新的朋友</string>
    <string name="back">返回</string>
    <string name="add_new_friend">添加好友</string>
    <string name="input_user_name">请输入用户名进行查找</string>
    <string name="add">添加</string>
    <string name="not_empty_user_name">输入的用户名不能为空！</string>
    <string name="send_invitation_success">成功发送邀请！</string>
    <string name="send_invitation_failure">发送邀请失败！</string>
    <string name="delete_this_friend">删除该好友</string>
    <string name="my_friend">我的好友</string>
    <string name="delete">删除</string>
    <string name="success">成功</string>
    <string name="failure">失败</string>
    <string name="accept">接受</string>
    <string name="reject">拒绝</string>

    <string name="add_a_friend">添加你为好友</string>
    <string name="accept_invitation">接受邀请</string>
    <string name="invitation_accepted">你的邀请被接受</string>
    <string name="accept_a_invitation">接受了好友邀请</string>
    <string name="accept_a_invitation_failure">接受好友邀请失败</string>
    <string name="reject_a_invitation">拒绝了好友邀请</string>
    <string name="reject_a_invitation_failure">拒绝好友邀请失败</string>
    <string name="invitation_list">邀请信息列表</string>


    <!--我的-->
    <string name="select_start_date">点击选择开始时间</string>
    <string name="select_end_date">点击选择结束时间</string>
    <string name="content">任务内容</string>
    <string name="priority">任务优先级</string>
    <string name="year">年</string>
    <string name="month">月</string>
    <string name="day">日</string>
    <string name="hour">:</string>
    <string name="minute">分</string>

    <string name="start_date">开始时间</string>
    <string name="end_date">结束时间</string>
    <string name="finish">任务已完成</string>
    <string name="save">保存</string>
    <string name="please_input_content">请输入任务内容</string>
    <string name="time_similar">开始时间与结束时间不能相同</string>
    <string name="save_success">保存成功！</string>
    <string name="welcome">欢迎使用 每日心情 APP~~</string>
    <string name="hint">您需同意该权限才能正常使用该APP~~</string>
    <string name="create_card">新建任务卡片</string>
    <string name="clear_all_cards">清空所有任务</string>
    <string name="clear_success">清空成功！</string>
    <string name="is_override">已有数据，是否覆盖？</string>
    <string name="ok">确定</string>
    <string name="cancel">取消</string>
    <string name="cancel_success">取消成功！</string>
    <string name="your_mood">您当天的心情</string>
    <string name="is_clear_all">是否确定清空？</string>
    <string name="empty_hint">空空如也，点击右下角添加心情卡片~~</string>
    <string name="start">开始</string>
    <string name="edit">编辑</string>
    <string name="delete_success">删除成功！</string>
    <string name="delete_fail">删除失败！</string>
    <string name="edit_card">编辑心情卡片</string>
    <string name="modify_success">修改成功！</string>
    <string name="item_hint">点击日期查看，点击选中卡片左滑可编辑/删除</string>
    <string name="existed_data">已有数据</string>

    <string name="drawer_open">open</string>
    <string name="drawer_close">close</string>
    <string name="logout_success">退出成功</string>

</resources>
